# food-tracker-backend

./: .env  .env.development  .env.production  .gitignore  .sqllsrc.json  Cargo.toml  Makefile  README.md  database_sqlite  db_dev  db_dev-shm  db_dev-wal  flake.nix  teste.sql.md
migrations/: 20231026095923_add_initial_tables.up.sql  20231026100003_insert_initial_ingridients.down.sql  20231026100003_insert_initial_ingridients.up.sql  20231106194644_create_usual_meal_descriptions.down.sql  20231106194644_create_usual_meal_descriptions.up.sql  20231109161332_add_dish_total_weight.down.sql  20231109161332_add_dish_total_weight.up.sql  20231120115006_remove_unused_meal_rating.down.sql  20231120115006_remove_unused_meal_rating.up.sql  20231120120619_add_meal_ingredient_relationship.down.sql  20231120120619_add_meal_ingredient_relationship.up.sql  20231124021745_added_dish_status.down.sql  20231124021745_added_dish_status.up.sql  20231202044435_added_ingredient_properties.down.sql  20231202044435_added_ingredient_properties.up.sql  20240303074427_add_ingredient_properties_columns.up.sql
migrations/2023-10-15-051037_create_dish_ingredient_meal_tables/: down.sql  up.sql
migrations/2023-10-23-020212_add_base_ingredients/: down.sql
src/: app_error.rs  lib.rs  main.rs  models.rs  schema.rs  server.rs
src/dish/: get.rs  list.rs  mod.rs  post.rs
src/dish/_id/: delete.rs  delete_warning.rs  get.rs  mod.rs  post.rs
src/dish/ingredient/: delete.rs  mod.rs  post.rs
src/ingredient/: get.rs  list.rs  mod.rs  post.rs
src/meal/: delete.rs  get.rs  list.rs  mod.rs  post.rs
(+27 files in other folders)
