[package]
name = "foodtracker-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide = { version = "0.12.0", features = [
	"axum",
	"axum-extra",
	"axum-headers",
	"redoc",
] }
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["macros"] }
chrono = { version = "0.4.31", features = ["serde", "default"] }
clap = { version = "4.4.6", features = ["derive"] }
dirs = "5.0.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
schemars = "0.8.15"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = [
	"runtime-tokio",
	"sqlx-sqlite",
	"sqlite",
] }
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["macros", "full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
